# tock

boards/maix_go/: Cargo.toml  Makefile
boards/maix_go/src/: io.rs  main.rs
chips/k210/: Cargo.toml
chips/k210/src/: lib.rs
