[package]
name = "maix_go"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
rv32i = { path = "../../arch/rv32i" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
k210 = { path = "../../chips/k210" }
sifive = { path = "../../chips/sifive" }
